# iPAUR

./: README.md
convergence_test/: Makefile  analytical_operators.cpp  analytical_operators.h  main.cpp  ms_minimizer.cpp  ms_minimizer.h  ms_minimizer_video.cpp  run.sh
ms_minimizer_libpng/: Makefile  huber_rof_model.cpp  huber_rof_model.h  image.cpp  image.h  main.cpp  ms_minimizer.cpp  ms_minimizer.h  tv_l1_model.cpp  tv_l1_model.h  util.cpp  util.h
ms_minimizer_opencv/: Makefile  analytical_operators.cpp  analytical_operators.h  image.cpp  image.h  main.cpp  ms_minimizer.cpp  ms_minimizer.h  ms_minimizer_video.cpp  run.sh
ms_minimizer_opencv_color/: Makefile  analytical_operators.cpp  analytical_operators.h  image.cpp  image.h  main.cpp  main.h  ms_minimizer.cpp  ms_minimizer.h  ms_minimizer_video.cpp  ms_minimizer_video.h  run.sh
src/: EdgeDetector.h  EdgeDetector.tpp  GrayscaleImage.cpp  GrayscaleImage.h  GrayscaleImage.tpp  HSIImage.h  HSIImage.tpp  HuberROFModel.cpp  HuberROFModel.h  HuberROFModel.tpp  Image.h  ImageInpainting.cpp  ImageInpainting.h  ImageInpainting.tpp  ImageProcessing  LinearFilter.h  LinearFilter.tpp  Makefile  MorphologicalFilter.cpp  MorphologicalFilter.h  MorphologicalFilter.tpp  Parameter.cpp  Parameter.h  Parameter.tpp  RGBAImage.h  RGBAImage.tpp  RGBImage.cpp  RGBImage.h  RGBImage.tpp  ROFModel.h  ROFModel.tpp  RealTimeMinimizer.cpp  TVL1Model.cpp  (+73 more)
src/CUDA/exercises/day2/ex9/: CMakeLists.txt
src/CUDA/exercises/day2/ex9/include/: BoardVisualization.hpp  gameOfLife.h
src/CUDA/exercises/day2/ex9/src/: gameOfLife.cu  main.cpp
(+416 files in other folders)
